# G-Capston

capston_2023/capston_main/: CMakeLists.txt  package.xml
capston_2023/capston_main/include/capston_main/: main.hpp
capston_2023/capston_main/launch/: main.launch.py
capston_2023/capston_main/params/: make_plan.yaml
capston_2023/capston_main/src/: main.cpp  test.cpp
capston_2023/capston_motor/: package.xml  setup.cfg  setup.py
capston_2023/capston_motor/capston_motor/: capston_motor_node.py  capston_packet_handler.py
capston_2023/capston_msgs/: CMakeLists.txt  package.xml
capston_2023/capston_msgs/msg/: Motorcapston.msg
capston_2023/capston_msgs/srv/: Robotstates.srv  Waypoints.srv
capston_2023/capston_plan/: CMakeLists.txt  package.xml
capston_2023/capston_plan/data/: erica.pgm
capston_2023/capston_plan/include/capston_plan/: bcd.hpp  capstonplanning.hpp  cgal_comm.hpp  coverage_planner.hpp  decomposition.hpp  graph_base.hpp  sweep.hpp  tcd.hpp  visibility_graph.hpp  visibility_polygon.hpp  weakly_monotone.hpp
capston_2023/capston_plan/src/: bcd.cc  capstonplanning.cc  cgal_comm.cc  decomposition.cc  main.cpp  sweep.cc  tcd.cc  visibility_graph.cc  visibility_polygon.cc  weakly_monotone.cc
capston_2023/waypoint_nav2/: package.xml  setup.cfg  setup.py
capston_2023/waypoint_nav2/covert_png/: convert_pgm_2_png.py  machine1.pgm  machine_final.pgm  rectangular.py  temp.pgm
capston_2023/waypoint_nav2/waypoint_nav2/: .waypoint_follower.py.swo  robot_navigator.py  waypoint_follower.py
luna/arduino_msg/: CMakeLists.txt  package.xml
luna/arduino_msg/msg/: Arduino.msg
luna/iahrs_driver/: CMakeLists.txt  package.xml
luna/iahrs_driver/launch/: iahrs_driver.launch.py
luna/iahrs_driver/src/: iahrs_driver.cpp
luna/iahrs_srv/: CMakeLists.txt  package.xml
luna/iahrs_srv/srv/: AllDataReset.srv  EulerAngleInit.srv  EulerAngleReset.srv  PoseVelocityReset.srv  RebootSensor.srv
luna/luna_arduino/: CMakeLists.txt  package.xml
luna/luna_cartographer/: CMakeLists.txt  package.xml
luna/luna_cartographer/config/: luna_lds_2d.lua
luna/luna_cartographer/launch/: luna_cartographer.launch.py  occupancy_grid.launch.py
luna/luna_description/: CMakeLists.txt  package.xml
luna/luna_description/launch/: luna_description.launch.py  luna_description_rviz.launch.py  luna_state_publisher.launch.py
luna/luna_description/meshes/: base_link.STL  caster_l_link.STL  caster_r_link.STL  ems_link.STL  floor_link.STL  led_lilnk.STL  lidar_link.STL  mdui_link.STL  power_link.STL  volt_link.STL  wheel_cover_link.STL  wheel_l_link.STL  wheel_r_link.STL
luna/luna_description/rviz/: model.rviz
luna/luna_description/urdf/: luna.csv  luna.urdf  luna.urdf.g2.xacro
luna/luna_msg/: CMakeLists.txt  package.xml
luna/luna_msg/msg/: Pose.msg
luna/luna_navigation2/: CMakeLists.txt  package.xml
luna/luna_navigation2/launch/: luna_navigation2.launch.py
luna/luna_navigation2/map/: final.pgm  final.yaml  luna5.pgm  luna5.yaml  machine.pgm  machine.yaml  machine1.yaml  machine_final.yaml  outside_smoke.yaml  test.pgm  test.yaml
luna/luna_navigation2/param/: luna_navigation2.yaml  temp_navigation2.yaml  test.yaml  test_navigation.yaml
luna/md/: CMakeLists.txt  package.xml
luna/md/include/md_node/: com.hpp  global.hpp
luna/md/param/: md_param.yaml
luna/md/src/md_node/: com.cpp  main.cpp  robot.cpp
luna_bringup/: CMakeLists.txt  package.xml
luna_bringup/config/: ekf.yaml  luna_rviz.rviz
luna_bringup/launch/: fusion.launch.py  luna_bringup.launch.py  luna_lidar.launch.py
luna_bringup/params/: g2_lidar.yaml
luna_bringup/scripts/: luna_odom.py
turtlebot3_teleop/turtlebot3_teleop/script/: teleop_keyboard.py
