<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>capston_motor</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="st9051@hanyang.ac.kr">thiago</maintainer>
  <license>TODO: License declaration</license>

  <depend>capston_msgs</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
